--- a/static/index.css
+++ b/static/index.css
@@ -6,7 +6,7 @@
 	--accent-color-hover: #1763bf;
 	--accent-color-active: #1456a6;
 	--font-color-1: #e8ecef;
-	--button-color-1: #414141;
+    --button-color-1: #414141;
 	--button-color-hover: #515151;
 	--button-color-active: #616161;
 }
@@ -53,4 +53,47 @@ nav {
 	padding-right: 48px;
 	justify-content: space-between;
 	align-items: center;
+}
+
+/* Elements */
+.button-basic {
+	background-color: var(--accent-color);
+	color: var(--font-color-1);
+	font-size: .95em;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-left: 38px;
+	padding-right: 38px;
+	border: none;
+	border-radius: 3px;
+	text-decoration: none;
+}
+
+.button-basic:hover {
+	background-color: var(--accent-color-hover);
+}
+
+
+blockquote {
+    margin: 0;
+    padding: 12px;
+    border-left: 5px solid var(--background-color-2);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.15);
+}
+
+blockquote:hover {
+	background-color: var(--accent-color-hover);
+}
+
+select {
+	background-color: var(--button-color-1);
+	color: var(--font-color-1);
+	font-size: .95em;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-left: 38px;
+	padding-right: 38px;
+	border: none;
+	border-radius: 3px;
+	text-decoration: none;
 }
