--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,20 @@
     </head>
     <body>
         <nav>
-            <h1>Bell Admin</h1>
-            <a href="#">Logout</a>
-        </nav>
-        <main>
+            <h1>💍 Bell Admin</h1>
             <form method="POST" action="/select-device">
                 <select name="devices">
                     {{range $val := .PlaybackDevices}}
                         <option value="{{$val}}">{{$val}}</option>
                     {{end}}
                 </select>
-                <input type="submit" value="Set">
+                <input class="button-basic" type="submit" value="Set Device">
             </form>
+        </nav>
+        <main>
+            <blockquote>
+                <p><b>Need help with the cron syntax?</b> Try this tool: <a href="https://crontab.guru/">crontab.guru/</a></p>
+            </blockquote>
         </main>
     </body>
 </html>
