--- a/static/index.css
+++ b/static/index.css
@@ -20,7 +20,7 @@ body {
 	flex-direction: column;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, p, label {
 	margin: 0;
 	color: var(--font-color-1);
 }
@@ -45,7 +45,7 @@ main {
 	flex-grow: 1;
 }
 
-nav {
+nav, .job {
 	display: flex;
     background-color: var(--background-color-2);
 	padding: 24px;
@@ -71,8 +71,12 @@ nav {
 
 .button-basic:hover {
 	background-color: var(--accent-color-hover);
+	color: var(--font-color-1);
 }
 
+.button-basic:active {
+	background-color: var(--button-color-active);
+}
 
 blockquote {
     margin: 0;
@@ -81,19 +85,69 @@ blockquote {
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.15);
 }
 
-blockquote:hover {
-	background-color: var(--accent-color-hover);
+form .add-job {
+    display: flex;
+    padding: 12px;
+	gap: 8px;
+	flex-direction: column;
 }
 
-select {
+input[type=text] {
 	background-color: var(--button-color-1);
+	border: 2px solid var(--button-color-hover);
 	color: var(--font-color-1);
 	font-size: .95em;
 	padding-top: 6px;
 	padding-bottom: 6px;
-	padding-left: 38px;
-	padding-right: 38px;
-	border: none;
-	border-radius: 3px;
+	padding-left: 12px;
+	padding-right: 12px;
+	border-radius: 4px;
 	text-decoration: none;
+}
+
+input[type=text]:focus {
+	outline: none;
+	border: 2px solid var(--accent-color);
+}
+
+input[type=text]:required:invalid:not(:placeholder-shown) {
+	outline: none;
+	border: 2px solid #e87487;
+}
+
+select {
+	background-color: var(--button-color-1);
+	border: 2px solid var(--button-color-hover);
+	color: var(--font-color-1);
+	font-size: .95em;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-left: 12px;
+	padding-right: 12px;
+	border-radius: 4px;
+	text-decoration: none;
+}
+
+.job-list {
+    display: flex;
+	flex-direction: column;
+    gap: 8px;
+    width: 100%;
+    padding: 12px;
+	background-color: var(--button-color-1);
+}
+
+.job {
+    border-radius: 4px;
+}
+
+.job-disabled {
+    background: repeating-linear-gradient(
+        -45deg,
+        var(--background-color-2),
+        var(--background-color-2) 10px,
+        var(--background-color-1) 10px,
+        var(--background-color-1) 20px
+    );
+    background-color: var(--background-color-1);
 }
