--- a/static/index.css
+++ b/static/index.css
@@ -1,153 +1,162 @@
 /* Defaults: Make things look nicer */
 :root {
-	--background-color-1: #262629;
-	--background-color-2: #343438;
-	--accent-color: #1e7df0;
-	--accent-color-hover: #1763bf;
-	--accent-color-active: #1456a6;
-	--font-color-1: #e8ecef;
-    --button-color-1: #414141;
-	--button-color-hover: #515151;
-	--button-color-active: #616161;
+  --background-color-1: #262629;
+  --background-color-2: #343438;
+  --accent-color: #1e7df0;
+  --accent-color-hover: #1763bf;
+  --accent-color-active: #1456a6;
+  --font-color-1: #e8ecef;
+  --button-color-1: #414141;
+  --button-color-hover: #515151;
+  --button-color-active: #616161;
 }
 
 body {
-	background-color: var(--background-color-1);
-	min-height: 100vh;
-	margin: 0;
-	font-family: Segoe UI,system-ui,-apple-system,sans-serif;
-	display: flex;
-	flex-direction: column;
+  background-color: var(--background-color-1);
+  min-height: 100vh;
+  margin: 0;
+  font-family:
+    Segoe UI,
+    system-ui,
+    -apple-system,
+    sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
-h1, h2, h3, p, label {
-	margin: 0;
-	color: var(--font-color-1);
+h1,
+h2,
+h3,
+p,
+label {
+  margin: 0;
+  color: var(--font-color-1);
 }
 
 a {
-	color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 a:hover {
-	color: var(--accent-color-hover);
+  color: var(--accent-color-hover);
 }
 
 a:active {
-	color: var(--accent-color-active);
+  color: var(--accent-color-active);
 }
 
 /* Sections */
 main {
-	margin-top: 12px;
-	margin-left: 60px;
-	margin-right: 60px;
-	flex-grow: 1;
+  margin-top: 12px;
+  margin-left: 60px;
+  margin-right: 60px;
+  flex-grow: 1;
 }
 
-nav, .job {
-	display: flex;
-    background-color: var(--background-color-2);
-	padding: 24px;
-	padding-left: 48px;
-	padding-right: 48px;
-	justify-content: space-between;
-	align-items: center;
+nav,
+.job {
+  display: flex;
+  background-color: var(--background-color-2);
+  padding: 24px;
+  padding-left: 48px;
+  padding-right: 48px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Elements */
 .button-basic {
-	background-color: var(--accent-color);
-	color: var(--font-color-1);
-	font-size: .95em;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	padding-left: 38px;
-	padding-right: 38px;
-	border: none;
-	border-radius: 3px;
-	text-decoration: none;
+  background-color: var(--accent-color);
+  color: var(--font-color-1);
+  font-size: 0.95em;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 38px;
+  padding-right: 38px;
+  border: none;
+  border-radius: 3px;
+  text-decoration: none;
 }
 
 .button-basic:hover {
-	background-color: var(--accent-color-hover);
-	color: var(--font-color-1);
+  background-color: var(--accent-color-hover);
+  color: var(--font-color-1);
 }
 
 .button-basic:active {
-	background-color: var(--button-color-active);
+  background-color: var(--button-color-active);
 }
 
 blockquote {
-    margin: 0;
-    padding: 12px;
-    border-left: 5px solid var(--background-color-2);
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.15);
+  margin: 0;
+  padding: 12px;
+  border-left: 5px solid var(--background-color-2);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
 }
 
 form .add-job {
-    display: flex;
-    padding: 12px;
-	gap: 8px;
-	flex-direction: column;
+  display: flex;
+  padding: 12px;
+  gap: 8px;
+  flex-direction: column;
 }
 
-input[type=text] {
-	background-color: var(--button-color-1);
-	border: 2px solid var(--button-color-hover);
-	color: var(--font-color-1);
-	font-size: .95em;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	padding-left: 12px;
-	padding-right: 12px;
-	border-radius: 4px;
-	text-decoration: none;
+input[type="text"] {
+  background-color: var(--button-color-1);
+  border: 2px solid var(--button-color-hover);
+  color: var(--font-color-1);
+  font-size: 0.95em;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 4px;
+  text-decoration: none;
 }
 
-input[type=text]:focus {
-	outline: none;
-	border: 2px solid var(--accent-color);
+input[type="text"]:focus {
+  outline: none;
+  border: 2px solid var(--accent-color);
 }
 
-input[type=text]:required:invalid:not(:placeholder-shown) {
-	outline: none;
-	border: 2px solid #e87487;
+input[type="text"]:required:invalid:not(:placeholder-shown) {
+  outline: none;
+  border: 2px solid #e87487;
 }
 
 select {
-	background-color: var(--button-color-1);
-	border: 2px solid var(--button-color-hover);
-	color: var(--font-color-1);
-	font-size: .95em;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	padding-left: 12px;
-	padding-right: 12px;
-	border-radius: 4px;
-	text-decoration: none;
+  background-color: var(--button-color-1);
+  border: 2px solid var(--button-color-hover);
+  color: var(--font-color-1);
+  font-size: 0.95em;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 4px;
+  text-decoration: none;
 }
 
 .job-list {
-    display: flex;
-	flex-direction: column;
-    gap: 8px;
-    width: 100%;
-    padding: 12px;
-	background-color: var(--button-color-1);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  padding: 12px;
+  background-color: var(--button-color-1);
 }
 
 .job {
-    border-radius: 4px;
+  border-radius: 4px;
 }
 
 .job-disabled {
-    background: repeating-linear-gradient(
-        -45deg,
-        var(--background-color-2),
-        var(--background-color-2) 10px,
-        var(--background-color-1) 10px,
-        var(--background-color-1) 20px
-    );
-    background-color: var(--background-color-1);
+  background: repeating-linear-gradient(
+    -45deg,
+    var(--background-color-2),
+    var(--background-color-2) 10px,
+    var(--background-color-1) 10px,
+    var(--background-color-1) 20px
+  );
+  background-color: var(--background-color-1);
 }
