--- a/static/index.css
+++ b/static/index.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
 }
 
+a.no-highlight,
 h1,
 h2,
 h3,
@@ -31,6 +32,7 @@ p,
 label {
   margin: 0;
   color: var(--font-color-1);
+  text-decoration: none;
 }
 
 a {
@@ -94,14 +96,15 @@ blockquote {
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
 }
 
-form .add-job {
+form.column {
   display: flex;
   padding: 12px;
   gap: 8px;
   flex-direction: column;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   background-color: var(--button-color-1);
   border: 2px solid var(--button-color-hover);
   color: var(--font-color-1);
@@ -114,12 +117,13 @@ input[type="text"] {
   text-decoration: none;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   outline: none;
   border: 2px solid var(--accent-color);
 }
 
-input[type="text"]:required:invalid:not(:placeholder-shown) {
+input:required:invalid:not(:placeholder-shown) {
   outline: none;
   border: 2px solid #e87487;
 }
