--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,11 @@
         <option value="" disabled selected>Select an action</option>
         <option value="ring-{{ $value.ID }}">Ring</option>
         <option value="delete-{{ $value.ID }}">Delete Job</option>
-        <option value="toggle-{{ $value.ID }}">Toggle Job</option>
+        {{ if $value.Enabled  }}
+        <option value="toggle-{{ $value.ID }}">Disable Job</option>
+        {{ else }}
+        <option value="toggle-{{ $value.ID }}">Enable Job</option>
+        {{ end }}
       </select>
       <input type="submit" class="button-basic" value="Act" />
     </form>
