--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,4 @@
-{{define "content"}}
-{{ if . }}
+{{define "content"}} {{ if . }}
 <blockquote><p>{{.}}</p></blockquote>
 {{end}}
 <form class="column" method="POST">
