--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
       <h1><a class="no-highlight" href="/">💍 Bell Admin</a></h1>
       {{block "nav-element" .}}{{end}}
     </nav>
+    <div class="tab">
+      <a href="/">Jobs</a>
+      <a href="/peers">Peers</a>
+    </div>
     <main>{{template "content" .}}</main>
   </body>
 </html>
