--- a/static/index.css
+++ b/static/index.css
@@ -90,17 +90,17 @@ nav,
 }
 
 .tab {
+  display: flex;
+  flex-direction: row;
   overflow: hidden;
-  background-color: var(--button-color-1);
+  gap: 8px;
 }
 
 .tab a {
   color: white;
+  background-color: var(--button-color-1);
   text-decoration: none;
-  background-color: inherit;
-  float: left;
-  border-right: 5px solid var(--button-color-active);
-  outline: none;
+  border-radius: 3px;
   cursor: pointer;
   padding: 14px 16px;
 }
@@ -111,6 +111,13 @@ nav,
 
 .tab a:active {
   background-color: var(--button-color-active);
+}
+
+.tools {
+  width: 100%;
+  display: flex;
+  background-color: var(--button-color-active);
+  padding: 12px;
 }
 
 blockquote {
