Use a plugin in order to make prettier cooperate with go templates

--- a/templates/add-job.html
+++ b/templates/add-job.html
@@ -1,22 +1,27 @@
-{{define "content"}}
-<blockquote>
-  <p>
-    <b>Need help with the cron syntax?</b> Try this tool:
-    <a href="https://crontab.guru/">crontab.guru/</a>
-  </p>
-</blockquote>
+{{ define "content" }}
+  <blockquote>
+    <p>
+      <b>Need help with the cron syntax?</b> Try this tool:
+      <a href="https://crontab.guru/">crontab.guru/</a>
+    </p>
+  </blockquote>
 
-<form class="column" method="POST">
-  <h2>Create a new job</h2>
-  <label for="text">Job Title:</label>
-  <input
-    placeholder="Enter the title of the job"
-    type="text"
-    name="title"
-    required
-  />
-  <label for="text">Cron Expression:</label>
-  <input placeholder="* * * * *" type="text" name="cron-expression" required />
-  <input type="submit" class="button-basic" value="Add" />
-</form>
-{{end}}
+  <form class="column" method="POST">
+    <h2>Create a new job</h2>
+    <label for="text">Job Title:</label>
+    <input
+      placeholder="Enter the title of the job"
+      type="text"
+      name="title"
+      required
+    />
+    <label for="text">Cron Expression:</label>
+    <input
+      placeholder="* * * * *"
+      type="text"
+      name="cron-expression"
+      required
+    />
+    <input type="submit" class="button-basic" value="Add" />
+  </form>
+{{ end }}
