Fix small bugs, add more information to README, lock register page to non-users

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <div class="tab">
           <a href="/">Jobs</a>
           <a href="/peers">Peers</a>
+          <a href="/register">New Account</a>
         </div>
       </nav>
       <main>{{ template "content" . }}</main>
